Installed stripe dependencies and implemented card_payment_status,rent_payment_status and transaction_details exported function for other microservices
